# Linera-Poker

./: .gitignore  .vercelignore  ARCHITECTURE.md  BUILDATHON.md  BUILDATHON_SUBMISSION.md  CHANGELOG.md  CIRCUITS_README.md  Cargo.toml  DEPLOYMENT_FIXES_GUIDE.md  DYNAMIC_LABS_INTEGRATION.md  Dockerfile  JUDGE_REQUIREMENTS_VERIFICATION.md  JUDGE_RESPONSE.md  JUDGING.md  LICENSE  PERFORMANCE.md  PHASE2_COMPLETE.md  PHASE2_SUMMARY.md  PHASE2_TASKS_4_5_IMPLEMENTATION.md  PHASE3_PROGRESS.md  PHASE4_PROGRESS.md  QUICKSTART.md  README.md  RELAY_ARCHITECTURE.md  RUN_DEMO.md  START_HERE.md  clean-msg.sh  compose.yaml  deploy-conway-docker.bash  deploy-to-conway.bash  docker-compose.yml  hand_a_deploy.txt  hand_args.json  hand_b_deploy.txt  netlify.toml  output.txt  run.bash  table_args.json  table_deploy.txt  table_deploy_final.txt  (+4 more)
.cargo/: config.toml
.github/workflows/: ci.yml
deploy/: deploy.bash
docs/: DEMO_GUIDE.md  WHY_AMBITIOUS.md
frontend/: .env.conway  .env.example  .env.production  .env.production.template  .gitignore  IMPLEMENTATION_COMPLETE.md  deploy-netlify.ps1  deploy.bat  deploy.py  index.html  netlify-deploy.cjs  netlify-deploy.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
frontend/public/: _headers  worker-polyfill.js
frontend/src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
frontend/src/components/: Card.tsx  ConnectionStatus.tsx  CrossChainInfo.tsx  FairnessModal.tsx  GameControls.tsx  PlayerHand.tsx  PokerTable.tsx  ProvenanceBadge.tsx
frontend/src/components/loading/: ConwayConnectionLoading.tsx  JoiningTableLoading.tsx  ProcessingBetLoading.tsx  index.ts
frontend/src/config/: network.ts
frontend/src/contexts/: WalletContext.tsx
frontend/src/hooks/: useGameState.ts  useLineraWallet.ts
frontend/src/lib/: dynamic-signer.ts  linera-adapter.ts
frontend/src/services/: blockchain-query.ts
hand/: Cargo.toml
hand/src/: contract.rs  lib.rs  service.rs  state.rs
keys/: dealing.pk  dealing.vk  reveal.pk  reveal.vk
legal/: PRIVACY.md  RESPONSIBLE_GAMING.md  TERMS.md
shared/: Cargo.toml
shared/src/: lib.rs  zk.rs  zk_test.rs
shared/src/circuits/: dealing.rs  gadgets.rs  mod.rs  reveal.rs
table/: Cargo.toml
table/src/: contract.rs  lib.rs  service.rs  state.rs
table/tests/: integration_test.rs
token/: Cargo.toml
token/src/: contract.rs  lib.rs  service.rs  state.rs
