[workspace]
resolver = "2"
members = [
    "shared",
    "table",
    "hand",
    "token",
]

[workspace.dependencies]
linera-sdk = "0.15"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

[profile.release]
opt-level = "z"
lto = true
strip = true
